ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RealWorld/parserharness/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
    --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RealWorld/parserharness/input.ts:1431:9
     |
1431 |         private optionRegex = /^[\/]{2}\s*@(\w+):\s*(\S*)/gm;  // multiple matches on multiple lines
     |         ^^^^^^^

error: Expected {, got module
    --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RealWorld/parserharness/input.ts:1415:12
     |
1415 |     export module TestCaseParser {
     |            ^^^^^^

